Ignore js cortez for now and use js cortez2 to render map. Still working through kinks.

--- a/templates/map_cortez.html
+++ b/templates/map_cortez.html
@@ -24,7 +24,7 @@
   <div id="map"></div>
 
   <!-- JavaScript file -->
-  <script type="text/javascript" src="../logic_cortez.js"></script>
+  <script type="text/javascript" src="../logic_cortez2.js"></script>
  
 </body>
 </html>
