--- a/templates/map_cortez.html
+++ b/templates/map_cortez.html
@@ -17,6 +17,9 @@
   <!-- D3 library -->
   <script src="https://d3js.org/d3.v5.min.js"></script>
 
+  <!-- Our CSS -->
+  <link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
