Adding updated index file

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,11 +11,11 @@
   <h1>Navigate our website to check for US weather Alerts</h1>
 
   <!-- Link to Map Page -->
-  <strong></strong><a href="map.html">Interactive Weather Alert Map</a></strong>
+  <strong></strong><a href="map">Interactive Weather Alert Map</a></strong>
   <br>
 
   <!-- Link to Charts Page -->
-  <strong><a href="charts.html">Interactive Chart Diagrams</a></strong>
+  <strong><a href="charts">Interactive Chart Diagrams</a></strong>
   <br>
 
   <!-- Image -->
