--- a/templates/map.html
+++ b/templates/map.html
@@ -1,32 +1,74 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-  <meta charset="utf-8">
-  <title>Place Holder Weather Map</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-  <!-- Leaflet CSS -->
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #aa0f04;
+  color: white;
+}
+</style>
+  <!-- Leaflet CSS 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
     integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
     crossorigin="" />
+  -->
 
-  <!-- Leaflet JavaScript code -->
+  <!-- Leaflet JavaScript code 
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
     crossorigin=""></script>
+  -->
 
-  <!-- Our CSS -->
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <!-- Our CSS 
+  <link rel="stylesheet" type="text/css" href="../style.css">
+  -->
 </head>
-
 <body>
+
+  <div class="topnav">
+    <a class="active" href="map">Map</a>
+    <a href="/">Home</a>
+    <a href="charts">Charts</a>
+  </div>
+  
+  <div style="padding-left:16px">
+    <h2>Weather Alerts Map</h2>
+    <p>Explore the severe weather alerts map</p>
+  </div>
+
   <!-- The div where we'll insert our map -->
   <div id="map"></div>
-  <img src="https://cloudfront-us-east-1.images.arcpublishing.com/gray/C6YOEGVRXZAR7JHHN6TH5FYT2M.jpg" alt="Map Place Holder">
+  <img src="https://intelliweather.com/wp-content/images/main_slider3.jpg" alt="Map Place Holder">
   
 
-  <!-- JavaScript file -->
-  <script type="text/javascript" src="logic.js"></script>
+  <!-- JavaScript file 
+  <script type="text/javascript" src="../logic.js"></script>
+  -->
 </body>
 
 </html>
