--- a/templates/charts.html
+++ b/templates/charts.html
@@ -50,3 +50,64 @@ body {
 <img src="https://engineering.atspotify.com/wp-content/uploads/sites/2/2018/11/Introducing-Chartify.png" alt="Chart Placeholder">
 </body>
 </html>
+
+<!--Line Chart Code-->
+<canvas id="line-chart" width="800" height="450"></canvas>
+
+<!--Bar Graph Code-->
+<!DOCTYPE html>
+<html>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chart.js Bar Chart</title>
+    <!--Chart.js JS CDN--> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script> 
+  </head>
+  <body>
+
+    <div>
+	<canvas id="myChart"></canvas>
+    </div>
+
+    <script>
+      var ctx = document.getElementById('myChart').getContext('2d');
+      var myChart = new Chart(ctx, {
+          type: 'bar',
+          data: {
+            labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+            datasets: [{ 
+                data: [86,114,106,106,107,111,133],
+                label: "Total",
+                borderColor: "rgb(62,149,205)",
+                backgroundColor: "rgb(62,149,205,0.1)",
+                borderWidth:2
+              }, { 
+                data: [70,90,44,60,83,90,100],
+                label: "Accepted",
+                borderColor: "rgb(60,186,159)",
+                backgroundColor: "rgb(60,186,159,0.1)",
+                borderWidth:2
+              }, { 
+                data: [10,21,60,44,17,21,17],
+                label: "Pending",
+                borderColor: "rgb(255,165,0)",
+                backgroundColor:"rgb(255,165,0,0.1)",
+                borderWidth:2
+              }, { 
+                data: [6,3,2,2,7,0,16],
+                label: "Rejected",
+                borderColor: "rgb(196,88,80)",
+                backgroundColor:"rgb(196,88,80,0.1)",
+                borderWidth:2
+              }
+            ]
+          },
+        });
+    </script>
+
+  
+  
+  </body>
+</html>
