--- a/templates/charts.html
+++ b/templates/charts.html
@@ -66,50 +66,87 @@ body {
       const myChart = new Chart(ctx, {
           type: 'bar',
           data: {
-            labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+            labels: ["Unknown", "Minor", "Moderate", "Severe", "Extreme"],
             datasets: [{ 
                 data: [86,114,106,106,107,111,133],
                 label: "Total",
                 borderColor: "rgb(62,149,205)",
                 backgroundColor: "rgb(62,149,205,0.1)",
                 borderWidth:2
-              }
+              },
             ],
-        },
-    });
+          },
+          options: {
+            title: {
+              display: true,
+              text: "ANALYZING EVENTS BY SEVERITY"
+            },
+            legend: {
+              position: 'bottom',
+              labels: {
+                boxWidth: 20,
+                padding: 20
+              }
+            },
+            scales: {
+              yAxes: [{
+                ticks: {
+                  beginAtZero: true
+                }
+              }]
+            }
+          }
+      });
 
         const ctx1 = document.getElementById('myChart1').getContext('2d');
       const myChart1 = new Chart(ctx1, {
-          type: 'line',
+          type: 'pie',
           data: {
-            labels: ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+            labels: ["Tornadoes","Hurricanes", "Earthquakes", "Winter Storms", "Heavy Rain", "Snow Blizzards", "Below Freezing"],
             datasets: [{ 
-                data: [86,114,106,106,107,111,133],
-                label: "Total",
-                borderColor: "rgb(62,149,205)",
-                backgroundColor: "rgb(62,149,205,0.1)",
-                borderWidth:2
-              }, { 
-                data: [70,90,44,60,83,90,100],
-                label: "Accepted",
-                borderColor: "rgb(60,186,159)",
-                backgroundColor: "rgb(60,186,159,0.1)",
-                borderWidth:2
-              }, { 
-                data: [10,21,60,44,17,21,17],
-                label: "Pending",
-                borderColor: "rgb(255,165,0)",
-                backgroundColor:"rgb(255,165,0,0.1)",
-                borderWidth:2
-              }, { 
-                data: [6,3,2,2,7,0,16],
-                label: "Rejected",
-                borderColor: "rgb(196,88,80)",
-                backgroundColor:"rgb(196,88,80,0.1)",
+                data: [6,3,2,2,7,6,16],
+                borderColor: [
+                  "#3cba9f",
+                  "#ffa500",
+                  "#c45850",
+                  "#76448a",
+                  "#21618c",
+                  "#f4d03f",
+                  "#66ffff"
+            ],
+                backgroundColor: [
+                  "rgb(60,186,159,0.1)",
+                  "rgb(255,165,0,0.1)",
+                  "rgb(196,88,80,0.1)",
+                  "rgb(118,68,138,0.1)",
+                  "rgb(33,97,140,0.1)",
+                  "rgb(244,208,63,0.1)",
+                  "rgb(102,255,255,0.1)"
+                ],
                 borderWidth:2
               }
             ]
           },
+          options: {
+            title: {
+              display: true,
+              text: "BREAKING DOWN TYPE OF EVENTS BY STATE"
+            },
+            legend: {
+              position: 'bottom',
+              labels: {
+                boxWidth:20,
+                padding:20
+              }
+            },
+            scales: {
+              yAxes: [{
+                ticks: {
+                  beginAtZero: true
+                }
+              }]
+            }
+          }
         });
         
     </script>
