making charts.html interactive

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@ body {
 
 <div class="topnav">
   <a class="active" href="/">Home</a>
-  <a href="{{url_for('map')}}">Map</a>
-  <a href="{{url_for('charts')}}">Charts</a>
+  <a class="nav-link" href="map.html">Map</a>
+  <a class="nav-link" href="charts.html">Charts</a>
 </div>
 <br>
 
