--- a/templates/charts.html
+++ b/templates/charts.html
@@ -34,6 +34,11 @@ body {
 </style>
 </head>
 
+<div class="topnav">
+  <a class="nav-link" href="index.html">Home</a>
+  <a class="nav-link" href="map.html">Map</a>
+  <a class="nav-link" href="charts.html">Charts</a>
+</div>
 
 <!DOCTYPE html>
 <html>
