--- a/templates/map.html
+++ b/templates/map.html
@@ -53,7 +53,7 @@ body {
   <div class="topnav">
     <a class="active" href="map">Map</a>
     <a href="/">Home</a>
-    <a href="charts">Charts</a>
+    <a class="nav-link" href="charts.html">Charts</a>
   </div>
   
   <div style="padding-left:16px">
