updating pie chart visualization

--- a/templates/charts.html
+++ b/templates/charts.html
@@ -49,7 +49,7 @@ body {
     <title>Chart.js Bar Chart</title>
     <style type="text/css">
         .chartBox {
-            width: 1200px;
+            width: 1320px;
 
         }
     </style>
@@ -138,19 +138,12 @@ body {
               text: "BREAKING DOWN TYPE OF EVENTS BY STATE"
             },
             legend: {
-              position: 'bottom',
+              position: 'left',
               labels: {
                 boxWidth:20,
-                padding:20
-              }
+                padding:50
+              },
             },
-            scales: {
-              yAxes: [{
-                ticks: {
-                  beginAtZero: true
-                }
-              }]
-            }
           }
         });
         
