successfully running through the websites

--- a/templates/charts.html
+++ b/templates/charts.html
@@ -33,11 +33,12 @@ body {
 }
 </style>
 </head>
+<body>
 
 <div class="topnav">
-  <a class="nav-link" href="index.html">Home</a>
-  <a class="nav-link" href="map.html">Map</a>
-  <a class="nav-link" href="charts.html">Charts</a>
+  <a class="active" href="/">Charts</a>
+  <a href="/">Home</a>
+  <a href="map">Map</a>
 </div>
 
 <!DOCTYPE html>
