--- a/templates/charts.html
+++ b/templates/charts.html
@@ -74,7 +74,7 @@ body {
           data: {
             labels: ["Unknown", "Minor", "Moderate", "Severe", "Extreme"],
             datasets: [{ 
-                data: [86,114,106,106,107,111,133],
+                data: [0,0,0,20,0],
                 label: "Total",
                 borderColor: "rgb(62,149,205)",
                 backgroundColor: "rgb(62,149,205,0.1)",
@@ -108,9 +108,9 @@ body {
       const myChart1 = new Chart(ctx1, {
           type: 'pie',
           data: {
-            labels: ["Tornadoes","Hurricanes", "Earthquakes", "Winter Storms", "Heavy Rain", "Snow Blizzards", "Below Freezing"],
+            labels: ["Flood Warning","Winter Storm Warning", "Winter Storm Watch", "Freeze Watch", "High Wind Warning", "Fire Weather Watch"],
             datasets: [{ 
-                data: [6,3,2,2,7,6,16],
+                data: [7,5,3,2,2,1],
                 borderColor: [
                   "#3cba9f",
                   "#ffa500",
@@ -118,7 +118,6 @@ body {
                   "#76448a",
                   "#21618c",
                   "#f4d03f",
-                  "#66ffff"
             ],
                 backgroundColor: [
                   "rgb(60,186,159,0.1)",
@@ -127,7 +126,6 @@ body {
                   "rgb(118,68,138,0.1)",
                   "rgb(33,97,140,0.1)",
                   "rgb(244,208,63,0.1)",
-                  "rgb(102,255,255,0.1)"
                 ],
                 borderWidth:2
               }
@@ -136,7 +134,7 @@ body {
           options: {
             title: {
               display: true,
-              text: "BREAKING DOWN TYPE OF EVENTS BY STATE"
+              text: "BREAKING DOWN TYPE OF EVENTS BY STATE (in TX)"
             },
             legend: {
               position: 'left',
