--- a/templates/index.html
+++ b/templates/index.html
@@ -30,16 +30,15 @@ body {
   <p style = "background-color: firebrick;" class="font-weight-bold"> Use the state navigator to explore severe weather alerts by State</p>
 </div>
 
-<div class ="states_menu">
-  <form action = "action_form.php" method="get">
-    <input type = "text" list = "states_menu" name="states_menu">
-    <select name = "states_menu" width = "300px"> 
+<div class="menu">
+<form id = "states_form" action="/data/${state}" methods="get">
+  <select name="state" width = "300px">
     {% for state in states %}
-    <option value = {{state}}>{{state}}</option>
+    <option name={{state}}>{{state}}</option>
     {% endfor %}
-    </select>
-    <input type = "submit" value ="search">
-  </form>
+  </select>
+  <input type="submit" value="search">
+</form>
 </div>
 
 <!-- Image -->
