--- a/templates/charts.html
+++ b/templates/charts.html
@@ -108,9 +108,9 @@ body {
       const myChart1 = new Chart(ctx1, {
           type: 'pie',
           data: {
-            labels: ["Flood Warning","Winter Storm Warning", "Winter Storm Watch", "Freeze Watch", "High Wind Warning", "Fire Weather Watch"],
+            labels: ["events"],
             datasets: [{ 
-                data: [7,5,3,2,2,1],
+                data: [(7,5,3,2,2,1)],
                 borderColor: [
                   "#3cba9f",
                   "#ffa500",
